--- a/styles/globals.css
+++ b/styles/globals.css
@@ -288,24 +288,27 @@ body {
   z-index: 999;
 }
 
+.share-title {
+  padding: 8px 16px 0px 16px;
+  font-family: 'Poppins', sans-serif;
+  font-size: 24px;
+}
+
 .share-option {
-  display: block;
-  width: 100%;
-  border: 1px solid black;
-  background: transparent;
-  text-align: left;
-  padding: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 16px;
+}
+
+.share-option .button {
+  white-space: nowrap;
 }
 
 .share-option-title {
-  font-family: 'PT Serif', serif;
+  font-family: 'Poppins', serif;
   font-size: 18px;
-  font-weight: 700;
-}
-
-.share-option-subtitle {
-  font-family: 'PT Serif', serif;
-  font-size: 14px;
+  font-weight: 500;
 }
 
 @keyframes fall {
