--- a/styles/globals.css
+++ b/styles/globals.css
@@ -393,6 +393,11 @@ body {
   margin-right: 8px;
 }
 
+.share-container-square .footer,
+.share-container-story .footer {
+  justify-content: center;
+}
+
 .footer {
   padding: 18px 24px;
   width: 100%;
